<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:visibility="gone"
        android:id="@+id/ll_user_bottom"
        android:background="@color/white"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_user_image"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_3sdp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_person_icon_placeholder"/>

        <LinearLayout
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_5sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_3sdp"
                android:gravity="center_vertical"
                android:orientation="vertical">
            <com.sb.ubergodriver.CommonUtils.CustomTextUtils.CustomTextView
                    android:id="@+id/tv_pickup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:fontName="@string/helveticabold"
                    android:text="@string/pickup"
                    android:textColor="@color/text_green"
                    android:textSize="@dimen/_12sdp"
                    android:singleLine="true"
                    android:gravity="center_vertical"/>

            <com.sb.ubergodriver.CommonUtils.CustomTextUtils.CustomTextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text=""
                    app:fontName="@string/helvetica"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp"
                    android:gravity="center_vertical"/>
        </LinearLayout>

        <com.sb.ubergodriver.CommonUtils.CustomTextUtils.CustomTextView
                android:id="@+id/tv_user_wait_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:padding="@dimen/_5sdp"
                android:layout_margin="@dimen/_3sdp"
                android:visibility="visible"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp"
                app:fontName="@string/helvetica"
        android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_waiting_rider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_7sdp"
                app:srcCompat="@drawable/ic_watch_with_left_vertical_icon"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical">
            <com.sb.ubergodriver.CommonUtils.CustomTextUtils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:fontName="@string/helvetica"
                    android:text="@string/waitforrider"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center_vertical"/>

            <com.sb.ubergodriver.CommonUtils.CustomTextUtils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/riderhasbeennotified"
                    app:fontName="@string/helvetica"
                    android:textSize="@dimen/_10sdp"
                    android:gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/tv_chat"
                app:fontName="@string/helveticabold"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:onClick="onClick"
                android:layout_margin="@dimen/_3sdp"
                android:visibility="visible"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/_3sdp"
                app:srcCompat="@drawable/ic_chat_icon"

        />
        <com.sb.ubergodriver.CommonUtils.CustomTextUtils.CustomButton
                app:fontName="@string/helvetica"
                android:id="@+id/btn_starttrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_15sdp"
                android:text="@string/starttrip"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@color/button_green"
                android:textColor="@color/white"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_10sdp"/>
    </LinearLayout>




</LinearLayout>